--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 
     <!-- font awesome icons-->
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/all.min.cssgit">
 
     <!-- my custom css files-->
     <link rel="stylesheet" href="./css/style.css">
@@ -17,11 +17,44 @@
 
 <body>
 
+
+    <!-- =======================Start Header Area========================-->
+
+    <header class="header_area">
+        <div class="main-menu">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <!-- =======================End of Header Area=======================-->
+
     <!-- jquery files -->
     <script src="./js/jquery.3.5.1.min.js"></script>
 
     <!-- bootstrap js files-->
     <script src="./js/bootstrap.min.js"></script>
-</body> 
+</body>
 
 </html>
