--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light ">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="./img/logo2.png" alt="logo" width=140 height=150></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My Services</a>
+                            <a class="nav-link" href="#">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Portfolio</a>
