adding the bannser area

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <header class="header_area">
         <div class="main-menu">
-            <nav class="navbar navbar-expand-lg navbar-light ">
-                <a class="navbar-brand" href="#"><img src="./img/logo2.png" alt="logo" width=140 height=150></a>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#"><img src="./img/logo3.png" alt="logo" width="90" height="30"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,21 +34,23 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">about</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#">services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="#">portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="#">pages</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#">blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact</a>
                         </li>
 
                     </ul>
@@ -56,8 +58,44 @@
             </nav>
         </div>
     </header>
-
     <!-- =======================End of Header Area=======================-->
+
+    <!-- ===========================Start main area ======================-->
+    <main class="site-main">
+    <!--=================== Start Site banner============================-->
+
+
+        <section class="site-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 site-title">
+                        <h3 class="title-text">Hey</h3>
+                        <h1 class="title-text uppercase">I am Haidi</h3>
+                        <h4 class="title-text uppercase">Love to build products</h4>
+                            <div class="site-buttons">
+                                <div class="d-flex flex-row flew-wrap">
+                                    <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
+                                    <button type="button" class="btn button secondary-button text-uppercase">My Resume</button>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 banner-image">
+                        <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+    <!--=================== End  Site banner============================-->
+    
+    </main>
+    
+    <!-- ===========================End main area =======================-->
+
+
+
 
     <!-- jquery files -->
     <script src="./js/jquery.3.5.1.min.js"></script>
