--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- ===========================Start main area ======================-->
     <main class="site-main">
-    <!--=================== Start Site banner============================-->
+        <!--=================== Start Site banner============================-->
 
 
         <section class="site-banner">
@@ -71,11 +71,13 @@
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text uppercase">I am Haidi</h3>
-                        <h4 class="title-text uppercase">Love to build products</h4>
+                            <h4 class="title-text uppercase">Love to build products</h4>
                             <div class="site-buttons">
                                 <div class="d-flex flex-row flew-wrap">
-                                    <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
-                                    <button type="button" class="btn button secondary-button text-uppercase">My Resume</button>
+                                    <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire
+                                        Me</button>
+                                    <button type="button" class="btn button secondary-button text-uppercase">My
+                                        Resume</button>
                                 </div>
                             </div>
                     </div>
@@ -88,10 +90,44 @@
         </section>
 
 
-    <!--=================== End  Site banner============================-->
-    
+        <!--=================== End  Site banner============================-->
+
+        <!--=================== About me Area ==================================-->
+        <section class="about-area">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="about-img">
+                            <img src="./img/about-us.png" alt="about us" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 about-title">
+                        <h2 class="text-uppercase pt-5">
+                            <span>Let me</span>
+                            <span>introduce </span>
+                            <span>myself</span>
+                        </h2>
+                        <div class="paragraph p-4 w-75">
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae atque expedita nesciunt
+                                voluptates facilis quia minima vitae sed voluptate maxime!
+                            </p>
+                            <p class="para">
+                                this paragraph will talk about my experience being a software engineer and a good
+                                builder
+                            </p>
+                        </div>
+                        <button type="button" class="btn button primary-button text-uppercase">Download Resume</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--=================== End of About me Area============================-->
+
+
     </main>
-    
+
     <!-- ===========================End main area =======================-->
 
 
