adding the my services area

--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@
         <!--=================== End of About me Area============================-->
 
 
+        <!-- ========================Start Services area=========================-->
+        <section class="service-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center services-title ">
+                        <h1 class="text-uppercase title-text">My Services</h1>
+                        <p class="para">
+                            SOme lorem ipsum about the offers
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
+
+        <!-- ========================End Services area=========================-->
+
     </main>
 
     <!-- ===========================End main area =======================-->
