--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
         <!-- ========================Start Services area=========================-->
-        <section class="service-area">
+        <section class="services-area">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title ">
@@ -137,7 +137,76 @@
                         </p>
                     </div>
                 </div>
+                <div class="container services-list">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <img src="./img/services/s1.png" alt="Services-1" class="">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Machine Learning </h5>
+                                    <p class="card-text text-secondary">
+                                        Buidling Data piepline
+                                        Infrastrucutre
+                                        Microservices
+                                    </p>
+                                </div>
 
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <img src="./img/services/s2.png" alt="Services-2" class="">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Data engineering </h5>
+                                    <p class="card-text text-secondary">
+                                        Buidling Data piepline
+                                        Infrastrucutre
+                                        Microservices
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="servicecs-img text-center py-4">
+                                    <img src="./img/services/s3.png" alt="Services-3" class="">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Infrastrucutre </h5>
+                                    <p class="card-text text-secondary">
+                                        Buidling Data piepline
+                                        Infrastrucutre
+                                        Microservices
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <a href="index.html" class="">
+                                        <img src="./img/services/s4.png" alt="Services-4" class="">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Product Managment </h5>
+                                    <p class="card-text text-secondary">
+                                        Buidling Data piepline
+                                        Infrastrucutre
+                                        Microservices
+                                    </p>
+                                    </a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
