--- a/index.html
+++ b/index.html
@@ -214,6 +214,62 @@
 
         <!-- ========================End Services area=========================-->
 
+
+        <!-- ========================== Project Area=============================-->
+
+        <section class="project-area">
+            <div class="container">
+                <div class="project-title pb-5">
+                    <h1 class="text-uppercase titile-h1">REeently Done Project</h1>
+                    <h1 class="text-uppercase title-h1">Quanlity Work</h1>
+                </div>
+                <div class="button-group">
+                    <button class="active" type="button"> All </button>
+                    <button type="button">Popular</button>
+                    <button type="button">Latest</button>
+                    <button type="button">Following</button>
+                    <button type="button">Upcoming</button>
+                </div>
+                <div class="row grid">
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <img src="./img/portfolio/p1.jpg" alt="portfolio-1" class="">
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Female light</h4>
+                                <span class="text-secondary">Popular,portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <img src="./img/portfolio/p2.jpg" alt="portfolio-2" class="">
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Female light</h4>
+                                <span class="text-secondary">Popular,portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <img src="./img/portfolio/p3.jpg" alt="portfolio-3" class="">
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Female light</h4>
+                                <span class="text-secondary">Popular,portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ========================== End of Project Area=============================-->
+
     </main>
 
     <!-- ===========================End main area =======================-->
