about myself section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text uppercase">I am Haidi</h3>
-                            <h4 class="title-text uppercase">Love to build products</h4>
+                            <h4 class="title-text uppercase">ML Engineer / Software Engineer</h4>
                             <div class="site-buttons">
                                 <div class="d-flex flex-row flew-wrap">
                                     <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire
@@ -109,12 +109,13 @@
                         </h2>
                         <div class="paragraph p-4 w-75">
                             <p class="para">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae atque expedita nesciunt
-                                voluptates facilis quia minima vitae sed voluptate maxime!
+                                Since i graduated as a software engineer i was deep diving into Data-Driven projects,
+                                which led me to learn everything about i could about Machine Learning and Deep Learning.
+
+
                             </p>
                             <p class="para">
-                                this paragraph will talk about my experience being a software engineer and a good
-                                builder
+                                Working on real world problems using Data helped me to shape my analytical thinking.
                             </p>
                         </div>
                         <button type="button" class="btn button primary-button text-uppercase">Download Resume</button>
