adding isotope.js

--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
 
     <!-- bootstrap js files-->
     <script src="./js/bootstrap.min.js"></script>
+
+    <!-- isotope.js -->
+    <script src="./vendor/isotope/isotope.min.js></script>
+
 </body>
 
 </html>
