updating my services

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="col-lg-12 text-center services-title ">
                         <h1 class="text-uppercase title-text">My Services</h1>
                         <p class="para">
-                            SOme lorem ipsum about the offers
+                            This what i will be offering if you hire me 
                         </p>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                                     <h5 class="card-title text-uppercase font-roboto">Machine Learning </h5>
                                     <p class="card-text text-secondary">
                                         Buidling Data piepline
-                                        Infrastrucutre
-                                        Microservices
+                                        Creating ML and Deep learning Algorithm
+                                        Optimization
                                     </p>
                                 </div>
 
@@ -162,11 +162,11 @@
                                     <img src="./img/services/s2.png" alt="Services-2" class="">
                                 </div>
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">Data engineering </h5>
+                                    <h5 class="card-title text-uppercase font-roboto">Software engineering </h5>
                                     <p class="card-text text-secondary">
-                                        Buidling Data piepline
-                                        Infrastrucutre
-                                        Microservices
+                                        Building Products in Stable 
+                                        Testing and Deployement
+                                        Microservices Architecture
                                     </p>
                                 </div>
 
@@ -180,9 +180,9 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">Infrastrucutre </h5>
                                     <p class="card-text text-secondary">
-                                        Buidling Data piepline
-                                        Infrastrucutre
-                                        Microservices
+                                        Buidling IT infrstrucure
+                                        Admnistration of Middleware Application Server
+                                        Ensuring Technical Performance
                                     </p>
                                 </div>
 
@@ -197,9 +197,9 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">Product Managment </h5>
                                     <p class="card-text text-secondary">
-                                        Buidling Data piepline
-                                        Infrastrucutre
-                                        Microservices
+                                        Managing from concept, to design, sample production, testing
+                                        Delivering the operating plan and growth objectives
+                                        Managing strategic planning and implementation
                                     </p>
                                     </a>
                                 </div>
