fixing the product management area

--- a/index.html
+++ b/index.html
@@ -191,17 +191,15 @@
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="services">
                                 <div class="services-img text-center py-4">
-                                    <a href="index.html" class="">
                                         <img src="./img/services/s4.png" alt="Services-4" class="">
                                 </div>
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">Product Managment </h5>
                                     <p class="card-text text-secondary">
-                                        Managing from concept, to design, sample production, testing
-                                        Delivering the operating plan and growth objectives
-                                        Managing strategic planning and implementation
+                                        Managing from concept, to design, sample production, testing. <br>
+                                        Delivering the operating plan and growth objectives. <br>
                                     </p>
-                                    </a>
+                                   
                                 </div>
 
                             </div>
