first draft of project area solution

--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
                 </div>
             </div>
         </section>
-
         <!-- ========================End Services area=========================-->
         <!-- ========================== Project Area=============================-->
         <section class="project-area">
@@ -235,8 +234,11 @@
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Minimul Desing</h4>
-                                <span class="text-secondary">Latest, Portfolio</span>
+                                <h4 class="text-uppercase">Amazon Fine Food </h4>
+                                <p> this is the description of the project </p>
+                                <p>
+                                    <span class="text-secondary"><a href=""> link to github</a></span>
+                                </p>
                             </div>
                         </div>
                     </div>
