final version of all projects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="./img/logo3.png" alt="logo" width="90" height="30"></a>
+                <!-- <a class="navbar-brand" href="#"><img src="./img/logo3.png" alt="logo" width="90" height="30"></a>-->>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -233,11 +233,12 @@
                                     <img src="./img/portfolio/p1.jpg" alt="portfolio-1" class="img-fluid">
                                 </a>
                             </div>
-                            <div class="title py-4">
-                                <h4 class="text-uppercase">Amazon Fine Food </h4>
+                            <div class="title py-4"><p>
+                                <h5 class="text-uppercase">Amazon Fine Food <br>
+                                Reviews </h5></p>
                                 <p> this is the description of the project </p>
                                 <p>
-                                    <span class="text-secondary"><a href=""> link to github</a></span>
+                                    <span class="text-secondary">link to : <a href=""> github</a> ||  <a href=""> Webapp</a> </span>
                                 </p>
                             </div>
                         </div>
