--- a/index.html
+++ b/index.html
@@ -361,14 +361,18 @@
     <!--  custom js file  -->
     <script src="./js/main.js"></script>
     <!-- JS for relaoding the pa -->
-    <script language=" JavaScript" >
+    <script type="text/javascript">
+        $(document).ready(function(){    
+            //Check if the current URL contains '#'
+            if(document.URL.indexOf("#")==-1){
+                // Set the URL to whatever it was plus "#".
+                url = document.URL+"#";
+                location = "#";
         
-        function LoadOnce() 
-        { 
-        sleep(5000);
-        window.location.reload(); 
-        } 
-        LoadOnce()
+                //Reload the page
+                location.reload(true);
+            }
+        });
         </script>
 
 </body>
