deleting hire me button

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text uppercase">I am Haidi</h3>
                             <h4 class="title-text uppercase">ML Engineer / Software Engineer</h4>
+                            <!--
                             <div class="site-buttons">
                                 <div class="d-flex flex-row flew-wrap">
                                     <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire
@@ -79,7 +80,7 @@
                                     <button type="button" class="btn button secondary-button text-uppercase">My
                                         Resume</button>
                                 </div>
-                            </div>
+                            </div>-->
                     </div>
                     <div class="col-lg-6 col-md-12 banner-image">
                         <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
@@ -110,7 +111,7 @@
                         <div class="paragraph p-4 w-75">
                             <p class="para">
                                 Since i graduated as a software engineer i was deep diving into Data-Driven projects,
-                                which led me to learn everything about i could about Machine Learning and Deep Learning.
+                                which led me to learn everything i could about Machine Learning and Deep Learning.
 
 
                             </p>
