--- a/index.html
+++ b/index.html
@@ -110,13 +110,15 @@
                         </h2>
                         <div class="paragraph p-4 w-75">
                             <p class="para">
-                                Since i graduated as a software engineer i was deep diving into Data-Driven projects,
-                                which led me to learn everything i could about Machine Learning and Deep Learning.
-
+                                Since i graduated as a software engineer i was deeply involved into Data-Driven projects,
+                                which led me to learn everything i could about Machine Learning, Deep Learning and they work
+                                in production environment.
+                                
 
                             </p>
                             <p class="para">
-                                Working on real world problems using Data helped me to shape my analytical thinking.
+                                Working on real world problems using Data helped me to shape my analytical thinking but also pushed me 
+                                to lean how to intersct with other players from the business and articulate my toughts more clearly.
                             </p>
                           
                         </div>
@@ -330,7 +332,7 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Microsoft Malware Detection <br>
                                 </h5></p>
-                                <p> this is the description of the project </p>
+                                <p>  </p>
                                 <p>
                                     <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Microsoft-Malware-Detection"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
