--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Amazon Fine Food <br>
                                 Reviews </h5></p>
-                                <p> this is the description of the project </p>
+                                <p> Reviews include product and user information, ratings, and a plain text review. <br>
+                                    The task will be to determine if a review is positive or negative and build 
+                                    an ML model around it. </p>
                                 <p>
                                     <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Amazon-Fine-Food-Review"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
