updating quora description

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                     The task will be to determine if a review is positive or negative and build 
                                     an ML model around it. </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Amazon-Fine-Food-Review"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary"> click on <a href="https://github.com/elhaidi/Amazon-Fine-Food-Review"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -265,9 +265,11 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Quora Question Pair <br>
                                 Similarity Problem </h5></p>
-                                <p> this is the description of the project </p>
+                                <p> The goal of this DataSet is to predict which of the provided pairs of questions contain two questions with the same meaning. <br>
+                                    Doing so will make it easier to find high quality answers to questions.
+                                </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Quora-Question-Pairs"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on <a href="https://github.com/elhaidi/Quora-Question-Pairs"> <em> <b>notebook link</b></em>  </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -285,7 +287,7 @@
                                 </h5></p>
                                 <p> this is the description of the project </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Personalized-cancer-diagnosis"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on <a href="https://github.com/elhaidi/Personalized-cancer-diagnosis"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
