updating Personalized cancer and NY taxi

--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Personalized Cancer Diagnosis <br>
                                 </h5></p>
-                                <p> this is the description of the project </p>
+                                <p>Once sequenced, a cancer tumor can have thousands of genetic mutations. Our goal is  to distinguish the mutations that contribute to tumor growth from the neutral mutations.
+                                    We will develop algorithms to classify genetic mutations based on clinical evidence (text). </p>
                                 <p>
                                     <span class="text-secondary">click on <a href="https://github.com/elhaidi/Personalized-cancer-diagnosis"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
@@ -302,7 +303,8 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Taxi Demand Prediction <br>
                                 </h5></p>
-                                <p> this is the description of the project </p>
+                                <p>We will build a model that predicts the total ride duration of taxi trips in New York City. The dataset is released by the NYC Taxi and Limousine Commission,
+                                     which includes pickup time, geo-coordinates, number of passengers, and several other variables. </p>
                                 <p>
                                     <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Taxi-Demand-prediction-in-New-York"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
