updating stack overflow description

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                     The task will be to determine if a review is positive or negative and build 
                                     an ML model around it. </p>
                                 <p>
-                                    <span class="text-secondary"> click on <a href="https://github.com/elhaidi/Amazon-Fine-Food-Review"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary"> click on the<a href="https://github.com/elhaidi/Amazon-Fine-Food-Review"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                     Doing so will make it easier to find high quality answers to questions.
                                 </p>
                                 <p>
-                                    <span class="text-secondary">click on <a href="https://github.com/elhaidi/Quora-Question-Pairs"> <em> <b>notebook link</b></em>  </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Quora-Question-Pairs"> <em> <b>notebook link</b></em>  </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -288,7 +288,7 @@
                                 <p>Once sequenced, a cancer tumor can have thousands of genetic mutations. Our goal is  to distinguish the mutations that contribute to tumor growth from the neutral mutations.
                                     We will develop algorithms to classify genetic mutations based on clinical evidence (text). </p>
                                 <p>
-                                    <span class="text-secondary">click on <a href="https://github.com/elhaidi/Personalized-cancer-diagnosis"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Personalized-cancer-diagnosis"> <em> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -306,7 +306,7 @@
                                 <p>We will build a model that predicts the total ride duration of taxi trips in New York City. The dataset is released by the NYC Taxi and Limousine Commission,
                                      which includes pickup time, geo-coordinates, number of passengers, and several other variables. </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Taxi-Demand-prediction-in-New-York"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary"> click on the <a href="https://github.com/elhaidi/Taxi-Demand-prediction-in-New-York"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -321,9 +321,10 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Stackoverflow Tag Predictor <br>
                                 </h5></p>
-                                <p> this is the description of the project </p>
+                                <p>The task is to predict the tags (a.k.a. keywords, topics, summaries), given only the question text and its title. 
+                                   The dataset contains content from disparate stack exchange sites, containing a mix of both technical and non-technical questions. </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/StackOverflow-Question-Tagging"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary"> click on the <a href="https://github.com/elhaidi/StackOverflow-Question-Tagging"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -340,7 +341,7 @@
                                 </h5></p>
                                 <p>  </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Microsoft-Malware-Detection"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Microsoft-Malware-Detection"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -358,7 +359,7 @@
                                 </h5></p>
                                 <p> this is the description of the project </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Amazon-Apperal-Recommendations"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Amazon-Apperal-Recommendations"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
@@ -376,7 +377,7 @@
                                 </h5></p>
                                 <p> this is the description of the project </p>
                                 <p>
-                                    <span class="text-secondary">link to : <a href="https://github.com/elhaidi/Netflix-Movie-Recommandations"> notebook </a> <!--||  <a href=""> Webapp</a> --></span>
+                                    <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Netflix-Movie-Recommandations"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
                             </div>
                         </div>
