--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Amazon discovery Engine<br>
                                 </h5></p>
-                                <p> this is the description of the project </p>
+                                <p> In this project we are going to build recommendation model for the electronics products of Amazon. </p>
                                 <p>
                                     <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Amazon-Apperal-Recommendations"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
