--- a/index.html
+++ b/index.html
@@ -376,7 +376,8 @@
                             <div class="title py-4"><p>
                                 <h5 class="text-uppercase">Netflix recommandation<br>
                                 </h5></p>
-                                <p> this is the description of the project </p>
+                                <p> Netflix held the Netflix Prize open competition for the best algorithm to predict user ratings for films. <br>
+                                     The goal is to build a recommander system using the dataset that was used in that competition.</p>
                                 <p>
                                     <span class="text-secondary">click on the <a href="https://github.com/elhaidi/Netflix-Movie-Recommandations"> <b>notebook link</b></em> </a> <!--||  <a href=""> Webapp</a> --></span>
                                 </p>
