adding more refactoring to the description

--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
                         <div class="paragraph p-4 w-75">
                             <p class="para">
                                 Since i graduated as a software engineer i was deeply involved into Data-Driven projects,
-                                which led me to learn everything i could about Machine Learning, Deep Learning and they work
+                                which led me to learn everything i could about Machine Learning, Deep Learning and  how they get implemented
                                 in production environment.
                                 
 
                             </p>
                             <p class="para">
                                 Working on real world problems using Data helped me to shape my analytical thinking but also pushed me 
-                                to lean how to intersct with other players from the business and articulate my toughts more clearly.
+                                to interact with other players from the business side and articulate my toughts more clearly.
                             </p>
                           
                         </div>
